# hydra

./: .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md
docs/: .gitignore  dev_notes.org
ext/: CMakeLists.txt
ext/imgui/: CMakeLists.txt
ext/wayland/: CMakeLists.txt
include/hydra/: config.h  shell.h  types.h
include/hydra/backend/: layer_shell_enum.h  layer_window.h  scancode.h  sdl.h
include/hydra/util/: callback.h  state_machine.h  state_machine_impl.h  trie.h  util.h
scripts/: Makefile  build.container  compose.yaml  ubuntu_deps.sh
src/common/: CMakeLists.txt  config.cpp
src/server/: CMakeLists.txt  config_builder.h  main.cpp  shell_launcher.cpp  shell_launcher.h  window_manager.cpp  window_manager.h  workspace_info.h  workspace_info_impl.h
src/shell/: CMakeLists.txt  search.cpp  search.h  shell.cpp  statusline.h  table.h  widget.h
src/shell/backend/: font.cpp  font.h  foreign_toplevel_wrapper.cpp  foreign_toplevel_wrapper.h  imgui.cpp  imgui.h  imgui_config.cpp  layer_shell_wrapper.cpp  layer_shell_wrapper.h  layer_window.cpp  sdl.cpp  wayland.h
src/shell/util/: fuzzy.h
test/: CMakeLists.txt
test/server/: workspace_info.cpp
test/shell/: example.cpp
test/util/: state_machine.cpp  trie.cpp
